# lookoptica

./: .gitignore  Readme.md  TEMP_HEAD.txt  docker-compose.yml  dpia-lite.md  lookdb_20260227_144618.dump  temp.txt
backend/: .env.example  Dockerfile  alembic.ini  create_tables.py  pyproject.toml  seed.py  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 03748b78f638_add_user_totp_fields.py  1e3f5a2d2be8_add_checkout_drafts_table.py  4ff41561e8cf_add_admin_audit_logs.py  65f24d80105e_add_admin_sessions_table.py  7a7d95b943a5_init.py  8748d4c7477f_init.py  8b1e1fc5baf0_add_missing_totp_columns.py  a19da8a2a801_add_orders_and_customer_addresses.py
backend/alembic_bak_1762775932/: script.py.mako
backend/alembic_bak_1762775932/versions/: 20b95d1592c9_init.py
backend/app/: config.py  db.py  init_db.py  main.py  product.py  security.py
backend/app/middleware/: csrf.py  rate_limit.py
backend/app/models/: __init__.py  admin_audit_log.py  admin_session.py  brand.py  category.py  checkout.py  checkout_draft.py  customer.py  customer_address.py  customer_session.py  order.py  order_notification.py  product.py  user.py
backend/app/payments/: viva.py
backend/app/routers/: admin_auth.py  admin_contact_lenses.py  admin_media.py  admin_products.py  admin_uploads.py  admin_users.py  checkout.py  contact.py  customer_auth.py  customer_checkout.py  final_checkout.py  orders.py  payments_viva.py  public_products.py  shop_products.py
backend/lookoptica_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: import_wp_dump.py
(+59 files in other folders)
