[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lookoptica-backend"
version = "0.1.0"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "pydantic>=2.8",
  "python-multipart>=0.0.9",
  "redis>=5.0",
]
requires-python = ">=3.11"

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
reload = true
