[metadata]
name = lookoptica-backend
version = 0.1.0

[options]
packages = find:
install_requires =
    fastapi>=0.115
    uvicorn[standard]>=0.30
    SQLAlchemy>=2.0
    psycopg[binary]>=3.2
    alembic>=1.13
    pydantic>=2.8
    python-multipart>=0.0.9
    redis>=5.0
python_requires = >=3.11

[options.packages.find]
include =
    app*
